<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/glimmerg_glide_reg"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAppLogo"
        app:layout_constraintStart_toStartOf="@+id/loginAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/loginAppLogo" />

    <TextView
        android:id="@+id/loginSalogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Let's Make the World Tastier"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAppName"
        app:layout_constraintStart_toStartOf="@+id/loginAppName"
        app:layout_constraintTop_toBottomOf="@+id/loginAppName"
        android:fontFamily="@font/lato_regular"/>

    <TextView
        android:id="@+id/loginMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/LoginMessage"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginSalogan"
        app:layout_constraintStart_toStartOf="@+id/loginSalogan"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintTop_toBottomOf="@+id/loginSalogan" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/hintForEmail"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/loginMsg"
        app:layout_constraintStart_toStartOf="@+id/loginMsg"
        app:layout_constraintTop_toBottomOf="@+id/loginMsg"
        android:fontFamily="@font/lato_regular"
        android:background="@drawable/edit_text"
        android:paddingLeft="10dp"
        android:elevation="5dp"/>


    <EditText
        android:id="@+id/passInput"
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="57dp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:background="@drawable/edit_text"
        android:elevation="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:textSize="18sp"
        android:background="@drawable/green_button_gradient"
        android:elevation="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/loginBtn"
        android:textAllCaps="false"

        android:outlineSpotShadowColor="@color/textColor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInput"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/or"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/continueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/_continue_With"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookLoginBtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableLeft="@drawable/facebookicon"
        android:elevation="5dp"
        android:fontFamily="@font/lato_bold"
        android:paddingLeft="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@+id/googleLoginBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWith"
        app:layout_goneMarginTop="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleLoginBtn"
        android:fontFamily="@font/lato_bold"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebookLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/continueWith"
        app:layout_goneMarginTop="18dp"
        android:drawableLeft="@drawable/googleicon"
        android:text="@string/google"
        android:background="@drawable/white_button"
        android:outlineSpotShadowColor="@color/textColor"
        android:textAllCaps="false"
        android:paddingLeft="15dp"
        android:elevation="5dp"/>



    <TextView
        android:id="@+id/dontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/googleLoginBtn"
        app:layout_constraintStart_toStartOf="@+id/facebookLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginBtn"
        android:layout_marginTop="24dp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/lato_regular"/>

</androidx.constraintlayout.widget.ConstraintLayout>