<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:background="@drawable/tansparent_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/left_arror"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/loginAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />


    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/glimmerg_glide_reg"
        android:text="@string/app_name"
        android:textColor="@color/textColor"

        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAppLogo"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="@+id/loginAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/loginAppLogo" />

    <TextView
        android:id="@+id/loginMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/lato_bold"
        android:text="Create New USer"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAppName"
        app:layout_constraintStart_toStartOf="@+id/loginAppName"
        app:layout_constraintTop_toBottomOf="@+id/loginAppName" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:background="@drawable/edit_text"
        android:elevation="5dp"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:fontFamily="@font/lato_regular"
        android:hint="Enter User Name"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/textColor"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/loginMsg"
        app:layout_constraintStart_toStartOf="@+id/loginMsg"
        app:layout_constraintTop_toBottomOf="@+id/loginMsg"
        tools:ignore="HardcodedText,RtlSymmetry,UnusedAttribute" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:background="@drawable/edit_text"
        android:elevation="5dp"
        android:ems="15"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/hintForEmail"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/textColor"

        android:layout_marginTop="12dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/userNameInput"
        app:layout_constraintStart_toStartOf="@+id/userNameInput"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput" />


    <EditText
        android:id="@+id/passInput"
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="57dp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/hintPassword"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:background="@drawable/edit_text"
        android:elevation="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/green_button_gradient"
        android:elevation="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="Create New User"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInput" />
</androidx.constraintlayout.widget.ConstraintLayout>